Fix search box spacing.

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -331,7 +331,7 @@ article {
     width: 10em;
     height: 25px;
     border: none;
-    margin-left: 0.5em;
+    margin-right: 0.5em;
     background: transparent;
     color: lighten(@color-text, 20%);
 
